samples/_failures_safe/1761403989_4e6f51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c1f7189.c: In function ‘main’:
./samples/SAFE/__tmp_8c1f7189.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
